ghc-4335c07/testsuite/tests/rename/should_fail/T9177.stderr

T9177.hs:4:13: error:
    Not in scope: type variable ‘int’
    Perhaps you meant type constructor or class ‘Int’ (imported from Prelude)

T9177.hs:7:14: error:
    Not in scope: type variable ‘integerr’
    Perhaps you meant type constructor or class ‘Integer’ (imported from Prelude)

T9177.hs:16:6: error:
    Not in scope: data constructor ‘Fun’
    Perhaps you meant variable ‘fun’ (line 20)
